HIVE-529. Some cleanup for join operator (Zheng Shao via namit)
git-svn-id: https://svn.apache.org/repos/asf/hadoop/hive/trunk@786343 13f79535-47bb-0310-9956-ffa450edef68